fixed spacing in sponsors container

--- a/YStemAndChess/src/app/footer/footer.component.scss
+++ b/YStemAndChess/src/app/footer/footer.component.scss
@@ -63,6 +63,7 @@ footer {
         padding-top:2%;
 
         h3 {
+            padding-bottom: 5%;
             font-family: 'Lato';
             font-size: 33px;
             font-weight: 900;
